[package]
name = "ulidr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.16.2", features = ["extension-module"]}
rusty_ulid = "1.0.0"

[lib]
name = "_rust_ulid"
crate-type = ["cdylib"]
