[tool.poetry]
name = "ulidr"
version = "0.1.0"
description = ""
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
